# kaggle-HuBMAP

./: README.md  pyproject.toml
kaggle_hubmap/data_utils/: annotations.py  core.py  image.py
metadata/: tile_meta_7033.csv  trn_img_meta_7033.csv
notebooks/: data_inspection.ipynb  nb_setup.py
notebooks/.ipynb_checkpoints/: data_inspection-checkpoint.ipynb
